--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://GITNAME.github.io/SNS",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
@@ -10,6 +11,7 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
