--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "nodemailer": "^6.9.5"
   }
 }
